<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="cam_3d_strings_creating_but_incorrect_direction_txt">Could not complete the capturing. Please pan in the correct direction.</string>
    <string name="cam_3d_strings_creating_but_too_quick_txt">Could not complete the capturing. Please pan more slowly.</string>
    <string name="cam_3d_strings_creating_but_too_slow_txt">Could not complete the capturing. Please pan faster.</string>
    <string name="cam_3d_strings_description_sweep_panorama_txt">Take a panoramic photo by sweeping your camera</string>
    <string name="cam_3d_strings_dialog_multi_angle_processing_include_black_area_txt">"Creating the following files:
- Multi Angle image
- 3D image
Note: These files contain a gray area."</string>
    <string name="cam_3d_strings_dialog_multi_angle_processing_txt">"Creating the following files:
- Multi Angle image
- 3D image"</string>
    <string name="cam_3d_strings_dialog_processing_include_black_area_txt">"Processing...
This image contains a gray area"</string>
    <string name="cam_3d_strings_dialog_processing_saving_image_title_txt">Saving image</string>
    <string name="cam_3d_strings_dialog_processing_txt">Processing...</string>
    <string name="cam_3d_strings_error_application_busy_txt">Please wait for a few seconds to launch 3D camera</string>
    <string name="cam_3d_strings_error_capturing_during_connecting_tv_title_txt">Error</string>
    <string name="cam_3d_strings_error_capturing_during_connecting_tv_txt">Unplug the cable. You cannot take a photo in this mode with a cable connected.</string>
    <string name="cam_3d_strings_error_direction_txt">Could not take picture. Please pan in the correct direction.</string>
    <string name="cam_3d_strings_error_too_quick_txt">Could not take picture. Please pan more slowly.</string>
    <string name="cam_3d_strings_error_too_slow_txt">Could not take picture. Please pan faster.</string>
    <string name="cam_3d_strings_setting_shooting_direction_down_txt">Down</string>
    <string name="cam_3d_strings_setting_shooting_direction_left_txt">Left</string>
    <string name="cam_3d_strings_setting_shooting_direction_right_txt">Right</string>
    <string name="cam_3d_strings_setting_shooting_direction_title_txt">Shooting direction</string>
    <string name="cam_3d_strings_setting_shooting_direction_up_txt">Up</string>
    <string name="cam_3d_strings_shooting_direction_guide_txt">Change direction by tapping icon on the left</string>
    <string name="cam_3d_strings_shooting_failure_title_txt">Could not shoot</string>
    <string name="cam_3d_strings_shooting_guide_down_to_up_txt">Pan from down to up</string>
    <string name="cam_3d_strings_shooting_guide_left_to_right_txt">Pan from left to right</string>
    <string name="cam_3d_strings_shooting_guide_pan_too_fast_txt">Pan more slowly</string>
    <string name="cam_3d_strings_shooting_guide_press_key_txt">Press the camera key and slowly pan the camera</string>
    <string name="cam_3d_strings_shooting_guide_right_to_left_txt">Pan from right to left</string>
    <string name="cam_3d_strings_shooting_guide_touch_cap_txt">Tap the camera button and slowly pan the camera</string>
    <string name="cam_3d_strings_shooting_guide_up_to_down_txt">Pan from up to down</string>
    <string name="cam_3d_strings_sweep_panorama_short_txt">Sweep Panorama</string>
    <string name="cam_app_shortcut_front_photo_txt">Front photo</string>
    <string name="cam_app_shortcut_manual_txt">Manual</string>
    <string name="cam_app_shortcut_video_txt">Video</string>
    <string name="cam_status_recoding_hours_time_format_txt">%1$d:%2$02d:%3$02d</string>
    <string name="cam_status_recoding_time_format_txt">%1$02d:%2$02d</string>
    <string name="cam_string_dualrec_m_apr_txt">April %1$td, %2$tY</string>
    <string name="cam_string_dualrec_m_aug_txt">August %1$td, %2$tY</string>
    <string name="cam_string_dualrec_m_dec_txt">December %1$td, %2$tY</string>
    <string name="cam_string_dualrec_m_feb_txt">February %1$td, %2$tY</string>
    <string name="cam_string_dualrec_m_jan_txt">January %1$td, %2$tY</string>
    <string name="cam_string_dualrec_m_jul_txt">July %1$td, %2$tY</string>
    <string name="cam_string_dualrec_m_jun_txt">June %1$td, %2$tY</string>
    <string name="cam_string_dualrec_m_mar_txt">March %1$td, %2$tY</string>
    <string name="cam_string_dualrec_m_may_txt">May %1$td, %2$tY</string>
    <string name="cam_string_dualrec_m_nov_txt">November %1$td, %2$tY</string>
    <string name="cam_string_dualrec_m_oct_txt">October %1$td, %2$tY</string>
    <string name="cam_string_dualrec_m_sep_txt">September %1$td, %2$tY</string>
    <string name="cam_string_dualrec_t_am_txt">%1$tl:%2$tM AM</string>
    <string name="cam_string_dualrec_t_pm_txt">%1$tl:%2$tM PM</string>
    <string name="cam_strings_accessibility_auto_review_txt">Auto photo preview</string>
    <string name="cam_strings_accessibility_back_main_txt">Back</string>
    <string name="cam_strings_accessibility_back_txt">Back</string>
    <string name="cam_strings_accessibility_capturing_mode_txt">Capturing mode</string>
    <string name="cam_strings_accessibility_close_color_button_txt">Close color adjustment</string>
    <string name="cam_strings_accessibility_color_brightness_button_txt">Close color and brightness adjustment</string>
    <string name="cam_strings_accessibility_color_brightness_expand_button_txt">Show color adjustment slider</string>
    <string name="cam_strings_accessibility_dual_effect_menu_txt">Dual camera effect</string>
    <string name="cam_strings_accessibility_flash_torch_txt">Flashlight</string>
    <string name="cam_strings_accessibility_flash_txt">Flash</string>
    <string name="cam_strings_accessibility_fusion_auto_txt">Double-tap to switch to auto dual camera</string>
    <string name="cam_strings_accessibility_fusion_off_txt">Double tap to turn on Dual camera</string>
    <string name="cam_strings_accessibility_fusion_on_txt">Double tap to turn off Dual camera</string>
    <string name="cam_strings_accessibility_image_quality_control_auto_button_deselected_txt">Auto deselected</string>
    <string name="cam_strings_accessibility_image_quality_control_auto_button_selected_txt">Auto selected</string>
    <string name="cam_strings_accessibility_image_quality_control_exposure_value_txt">Exposure value</string>
    <string name="cam_strings_accessibility_image_quality_control_focus_auto_deselected_txt">Auto deselected</string>
    <string name="cam_strings_accessibility_image_quality_control_focus_auto_selected_txt">Auto selected</string>
    <string name="cam_strings_accessibility_image_quality_control_focus_auto_txt">Autofocus</string>
    <string name="cam_strings_accessibility_image_quality_control_focus_manual_adjusted_txt">Focal length changed</string>
    <string name="cam_strings_accessibility_image_quality_control_focus_manual_txt">Manual focus</string>
    <string name="cam_strings_accessibility_image_quality_control_focus_txt">Focus</string>
    <string name="cam_strings_accessibility_image_quality_control_iso_txt">ISO</string>
    <string name="cam_strings_accessibility_image_quality_control_reset_button_txt">Reset all settings to default values</string>
    <string name="cam_strings_accessibility_image_quality_control_shutter_speed_auto_deselected_txt">Auto deselected</string>
    <string name="cam_strings_cta_description_txt">Allow below access request?</string>
    <string name="cam_strings_dialog_cta_access_txt">%1$s tries to</string>
    <string name="cam_strings_dialog_cta_turn_on_nfc_txt">Turn on NFC</string>
    <string name="cam_strings_dialog_cta_turn_on_wifi_txt">Turn on Wi-Fi</string>
    <string name="cam_strings_dialog_cta_wifi_mobile_data_txt">Use Wi-Fi &amp; mobile data</string>
    <string name="cam_strings_previous_txt">Previous</string>
    <string name="cam_strings_tutorial_button_next_txt">Next</string>
    <string name="cam_strings_tutorial_button_skip_txt">Skip</string>
    <string name="cam_strings_tutorial_button_txt">Got it</string>
    <string name="debug_preference_entry_title_always_predictive_capture">Enable Predictive Capture always</string>
    <string name="debug_preference_entry_title_auto_power_off">Disable Auto Power Off Timer</string>
    <string name="debug_preference_entry_title_emulate_sidetouch">Emulate Side Touch using view.</string>
    <string name="debug_preference_entry_title_force_migrate_settings">Force migrate settings</string>
    <string name="debug_preference_entry_title_low_power_mode">Disable low power mode on high temp.</string>
    <string name="debug_preference_title_debug_mode">Debug Mode</string>
    <string name="key_debug_always_predictive_capture">KEY_DEBUG_ALWAYS_PREDICTIVE_CAPTURE</string>
    <string name="key_debug_disable_auto_power_off">KEY_DEBUG_DISABLE_AUTO_POWER_OFF</string>
    <string name="key_debug_disable_low_power_mode">KEY_DEBUG_DISABLE_LOW_POWER_MODE</string>
    <string name="key_debug_emulate_sidetouch">KEY_DEBUG_EMULATE_SIDETOUCH</string>
    <string name="key_debug_force_migrate_settings">KEY_DEBUG_FORCE_MIGRATE_SETTINGS</string>
</resources>