<?xml version="1.0" encoding="utf-8"?>
<com.sonyericsson.android.camera.view.tutorial.PagingTutorialNormalNavigator android:layout_gravity="bottom" android:id="@id/tutorial_view_paging_navigator" android:layout_width="fill_parent" android:layout_height="@dimen/paging_tutorial_navigator_height" android:layoutDirection="ltr"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="#91000000" android:gravity="center_vertical" android:layout_gravity="left" android:id="@id/page_tutorial_skip_button" android:background="@drawable/tutorial_button_selector" android:paddingLeft="@dimen/tutorial_btn_horizontal_margin" android:paddingRight="@dimen/tutorial_btn_horizontal_margin" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/cam_strings_tutorial_button_skip_txt" android:contentDescription="@string/cam_strings_tutorial_button_skip_txt" android:textAllCaps="true" android:fontFamily="sans-serif-medium" />
    <ImageView android:layout_gravity="left" android:id="@id/page_tutorial_prev_icon_button" android:visibility="invisible" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/paging_tutorial_previous_button" android:contentDescription="@string/cam_strings_previous_txt" />
    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/page_tutorial_paging_navigation" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layoutDirection="ltr" />
    <TextView android:textSize="@dimen/tutorial_button_text_size" android:textStyle="normal" android:textColor="@color/tutorial_got_it_button" android:gravity="center_vertical" android:layout_gravity="right" android:id="@id/page_tutorial_next_button" android:background="@drawable/tutorial_button_selector" android:paddingLeft="14.0dip" android:paddingRight="14.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/cam_strings_tutorial_button_next_txt" android:maxLines="1" android:contentDescription="@string/cam_strings_tutorial_button_next_txt" android:textAllCaps="true" android:fontFamily="sans-serif-medium" />
    <TextView android:textSize="@dimen/tutorial_button_text_size" android:textStyle="normal" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_gravity="right" android:id="@id/page_tutorial_gotit_button" android:background="@drawable/tutorial_got_it_button_selector" android:paddingLeft="14.0dip" android:paddingRight="14.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/cam_strings_tutorial_button_txt" android:maxLines="1" android:contentDescription="@string/cam_strings_tutorial_button_txt" android:textAllCaps="true" android:fontFamily="sans-serif-medium" />
</com.sonyericsson.android.camera.view.tutorial.PagingTutorialNormalNavigator>
